# orion-sec

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
_gal/: adm.gxl  work.gxl
_gal/.report/: task_2025-08-11 14:03:48.yaml  task_2025-08-11 14:06:26.yaml  task_2025-08-11 14:06:55.yaml  task_2025-08-11 15:28:01.yaml  task_2025-08-12 09:46:33.yaml  task_2025-08-12 10:35:48.yaml  task_2025-08-12 11:58:39.yaml  task_2025-08-12 12:05:12.yaml  task_2025-08-12 14:00:05.yaml  task_2025-08-12 18:11:52.yaml  task_2025-08-12 18:17:33.yaml  task_2025-08-12 20:16:35.yaml  task_2025-08-12 20:16:53.yaml  task_2025-08-13 16:10:27.yaml  task_2025-08-13 16:11:50.yaml  task_2025-08-14 15:46:26.yaml  task_2025-08-14 17:16:46.yaml  task_2025-08-14 17:17:03.yaml  task_2025-08-15 10:47:40.yaml  task_2025-08-15 18:22:10.yaml  task_2025-08-16 10:33:25.yaml  task_2025-08-16 10:42:16.yaml  task_2025-08-16 10:42:18.yaml  task_2025-08-16 10:42:31.yaml  task_2025-08-16 11:02:48.yaml  task_2025-08-16 11:04:26.yaml  task_2025-08-16 11:09:01.yaml  task_2025-08-16 11:31:20.yaml  task_2025-08-16 11:37:26.yaml  task_2025-08-16 11:38:27.yaml  task_2025-08-16 11:38:34.yaml  task_2025-08-19 14:23:21.yaml  task_2025-08-19 14:23:29.yaml  task_2025-08-19 14:24:13.yaml  task_2025-08-19 14:26:23.yaml  task_2025-08-19 14:26:48.yaml  task_2025-08-19 15:52:38.yaml  task_2025-08-19 15:52:42.yaml  task_2025-08-19 15:55:05.yaml  task_2025-08-19 15:57:02.yaml  (+19 more)
_gal/mods/: rust.gxl
_gal/mods/rust/: coverage.sh
src/: error.rs  lib.rs  load.rs  sec.rs  types.rs
(+1 files in other folders)
