[package]
name = "orion-sec"
version = "0.2.0"
authors = ["wukong<sec-wukong@outlook.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
orion-error = "~0.5"
orion_conf = "~0.1"
orion_variate = { git = "https://github.com/galaxy-sec/orion-variate.git", tag = "v0.9.1" }
unicase = "~2.8"
getset = "0.1.6"
fs_extra = "1.3"
thiserror = "~2.0"
chrono = "0.4.41"
log = "~0.4"

serde = "1.0"
serde_derive = "1.0"
url = "2.5"
indexmap = "2.10"
serde_yaml = "0.9"
derive_more = { version = "2.0", features = ["full"] }
contracts = "0.6"
once_cell = "1.21"


[dev-dependencies]
rstest = "0.26"
tempfile = "3.10"
